# job-discovery

./: .dockerignore  .env.example  .gitignore  .trivyignore  AGENT.md  Dockerfile  Dockerfile.local-llm  EPICS-AND-STORIES.md  README.md  check_files.py  docker-compose.yml  fix_prompts.sh  generate_docs.py  nginx.conf  parse_jira.py  patch_ci.py  proposal-v4-epics.md  supervisord.conf  test_app.py  update_csv.py
backend/: .bandit  AGENT.md  README.md  auth.py  bandit-report.json  conftest.py  db.py  dlq_fallback.json  fake_db.py  filters.py  logging_config.py  main.py  models.py  pyproject.toml  rbac.py  settings.py  test_migration.py
backend/admin/: clear_db.py  migrate.py  replay_dlq.py  rollback.py  run_evals.py  seed_keywords.py  test_integration.py  update_logs.py  update_security.py
backend/agents/: AGENT.md  base.py  proxy.py  registry.py  telemetry.py  test_proxy.py
backend/agents/application_assistant/: AGENT.md  __init__.py  application_agent.py  worker.py
backend/agents/cover_letter/: AGENT.md  cover_letter_agent.py
backend/agents/qa/: qa_agent.py
backend/api/: dependencies.py
backend/evals/: ragas_runner.py
backend/llm/: client.py  config.py  logging.py
backend/middleware/: __init__.py  auth.py  gateway.py  rate_limit.py  test_gateway.py  test_rate_limit.py
backend/migrations/: env.py
backend/models/: DOMAIN-MODELS.md  __init__.py
backend/repositories/: job.py
backend/routers/: dependencies.py  jobs.py  scrape.py
backend/schemas/: __init__.py  agent_envelope.py
backend/services/: filters.py  toon_parser.py  tuning_data_service.py
(+386 files in other folders)
