[project]
name = "job-discovery-backend"
version = "0.1.0"
description = "AI-Powered Job Discovery Platform API"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "playwright>=1.43.0",
    "litellm>=1.35.0",
    "asyncpg>=0.31.0",
    "sqlalchemy>=2.0.49",
    "alembic>=1.18.4",
    "opentelemetry-api>=1.41.1",
    "opentelemetry-sdk>=1.41.1",
    "opentelemetry-instrumentation-fastapi>=0.62b1",
    "pyjwt>=2.12.1",
    "pwdlib[argon2]>=0.2.0",
    "redis>=5.0.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 120
target-version = "py314"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "ruff>=0.15.13",
]
evals = [
    "deepeval>=1.0.0",
    "ragas>=0.1.0",
]
